--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.5.1",
     "iconsax-react": "^0.0.8",
     "next": "15.2.3",
+    "next-intl": "^4.0.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
